@@ -1,4 +1,7 @@
 For 1.20.2
+	- adjusted the OcclusionCulling parameters to better handle nodes with few pixels
+	  visible.
+
 	- Linux Firefox/Opera/Icecape/Mozilla plugin - reworked to prevent a possible
 	  synchronization problem at plugin startup.
 
